--- a/styles.css
+++ b/styles.css
@@ -24,4 +24,152 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--neutral-white)
+}
+
+.card{
+    width: clamp(18.8rem, calc(100% - 3rem), 21rem);
+    background-color: var(--neutral-very-dark-blue-card);
+    padding: 1.4rem;
+    border-radius: 0.8rem;
+}
+
+.text--blue{
+    color: var(--primary-soft-blue);
+}
+
+.text--thin{
+    font-weight: 400;
+}
+
+.text--white{
+    color: var(--neutral-white);
+}
+
+hr{
+    margin-top: 1rem;
+    border: none;
+    border-top: 1px solid var(--neutral-very-dark-blue-line);
+}
+
+.card__img__container{
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    margin-bottom: 1.5rem;
+    overflow: hidden;
+    border-radius: .8rem
+}
+
+.card__img{
+    width: 100%;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+
+.card__title{
+    font-size: 1.35rem;
+    font-weight: 600;
+    margin-bottom: 0.8rem;
+}
+
+.card__desc{
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+    font-weight: 300;
+    color: var(--primary-soft-blue)
+}
+
+.card__info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card__price-container{
+    display: flex;
+    align-items: center;
+    gap: .4rem;
+}
+
+.price{
+    color: var(--primary-cyan)
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    margin-top: 1.2rem;
+}
+
+.footer__avatar{
+    width: 2rem;
+    margin-right: .8rem;
+    border: 1px solid var(--neutral-white);
+    border-radius: 50%;
+}
+
+.time-left{
+    display: flex;
+    align-items: center;
+    gap: .4rem;
+}
+
+
+.card__icon{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 3rem;
+    height: 3rem;
+    opacity: 0;
+}
+
+.card__img__container:hover .card__icon{
+    opacity: 1;
+}
+
+.card__img__container::before{
+    content: "";
+    background-color:hsl(178, 100%, 50%);
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+}
+
+.card__img__container:hover::before{
+    opacity: .5;
+}
+
+.card__img__container:hover,
+.card__title:hover, 
+.footer__name:hover{
+    cursor: pointer
+}
+
+.card__title:hover,
+.footer__name:hover{
+    color: var(--primary-cyan);
+}
+
+.footer__name,
+.card__title{
+    transition: color 0.25s ease-in;
+}
+
+.card__img__container::before,
+.card__icon {
+    transition: opacity 0.25s ease-in;  /* Only opacity transition here */
+}
+@media screen and (min-width: 768px){
+    .footer{
+        margin-bottom: .3rem
+    }
+
+    .card__desc{
+        margin-bottom: 1.3rem
+    }
 }
